Revision history for Data-iRealPro

1.16

	Improvements for MMA output.

1.15	2019-01-20

	First support for MMA output.

1.14	2018-11-14

	Add Forum backend, to generate cut/paste data to post songs to
	the iRealPro forums, https://www.irealb.com/forums/forum.php .
	Fix stdout output with --list.
	Fix playlist name handling.

1.13	2018-11-06

	Miscellaneous small fixes, mostly for tests.

1.12	2018-11-05

	(Song) Fix typo in keymap that made key E undetectable.
	For testing, set env DATA_IREALPRO_MUSICXML to require the
	XML::LibXML module and perform the MusicXML tests.
	Rework packaging.

1.11	2018-11-01

	Add App::Packager 1.420 until 1.430 works.
	Make transpositions work.
	(script/irealcvt) Add --generate.
	(pp/linux) Update Makefile.
	(irealpro.cgi) Remove superfluous actual key text.
	(README) Move to GitHub.
	(Makefile.PL) Index irealcvt, hide modules.
	(irealpro.cgi) Show actual key as well.
	(Output/JSON, Output/Text) Allow output to stdout.
	(Output/JSON) Discard transpose.
	Tidied up repo meta in the Makefile.PL script.

1.10	2018-10-30

	Add --transpose option.
	More user friendly error messages when required modules
	PDF::API and Imager are missing.

1.09	2017-07-22

	Remove App::Packager. It is now on CPAN.

1.08	2017-05-22

	Fix problem with text input where space separated chords did
	not get a comma.
	Also fixed some other comma problems with text in/output.

1.07	2017-03-07

	Improvements to MusicXML import.
	Implement --musescore (auto-detected) to deal with a number
	of anomalities in the XML generated by MuseScore.
	Fixed key detection.

1.06	2017-03-06

	Improvements to MusicXML import.
	Implement --suppress-text for MusicXML input.
	Fix wildcard expansion on Windows.

1.05	2017-03-01

	Improvements to MusicXML import.
	Implement --condense, --override-alt and --suppress-upbeat for
	MusicXML input.

1.04	2017-02-28

	Improvements to MusicXML import.
	Small fixes in URI encoding.

1.03	2016-12-23

	Add argument globbing for MS-Windows.