@@ -5,8 +5,8 @@
 # Author          : Johan Vromans
 # Created On      : Fri Jan 15 19:15:00 2016
 # Last Modified By: Johan Vromans
-# Last Modified On: Sat Nov 10 15:04:53 2018
-# Update Count    : 134
+# Last Modified On: Wed Jun 16 16:24:50 2021
+# Update Count    : 139
 # Status          : Unknown, Use with caution!
 
 ################ Common stuff ################
@@ -141,6 +141,8 @@ sub app_setup {
 	  'dir=s',
 	  'playlist=s',
 	  'npp=s',
+	  'colmap=s',
+	  'crop',
 	  'transpose|x=i',
 	  'toc!',
 	  'catalog=s',
@@ -229,6 +231,8 @@ irealcvt [options] file [...]
 
     --npp=[hand|hand_strict|standard]	Near pixel-perfect output.
     --[no]toc		Produces [suppresses] the table of contents.
+    --crop		Crop output.
+    --colmap XXX	Map NPP glyph colours.
 
   MusicXML input options:
 
@@ -312,15 +316,39 @@ B<--dir>).
 
 =over 8
 
-=item B<--output=>I<XXX>
+=item B<--colmap=>I<XXX>
 
-Specifies the desired output file name.
+With NPP output, colour the glyphs in each cell according to the
+colour codes specified.
 
-The file name extension controls the output type. 
+The string consists of a series of colour specifications. You can use
+the primary and secondary colours with single uppercase letters (R, G,
+B, Y, M, C, K), or use lowercase colour names (red, green, etc.). A
+number specifies a repeat factor, so 4RG is the same as RRRRGGGG.
 
-=item B<--select=>I<NN>
+The final two codes specify the colour of texts and special symbols.
 
-Selects a single song from a playlist.
+The number of codes supplied must match the number of cells in the song.
+
+An example for a 4x4 bar song in 4/4 time:
+
+    8GBGorange4GM8GRG1KR
+
+=item B<-->[B<no->]B<condense>
+
+With MusicXML input, uses condensed chords when there may not be
+sufficient space to show a chord without overlapping.
+
+This is enabled by default.
+
+=item B<--crop>
+
+With PNG output, crops the size of the image.
+
+=item B<--dir=>I<XXX>
+
+With B<--split>, specifies the directory where the individual HTML
+files will be written.
 
 =item B<--list>
 
@@ -328,17 +356,10 @@ Prints the titles of the songs from a playlist.
 
 Output defaults to standard output.
 
-=item B<--split>
+=item B<-->[B<no->]B<musescore>
 
-Splits the songs from a playlist into individual HTML files. Use
-B<--dir> to control where the files will be written.
-
-Note: B<--output> is ignored.
-
-=item B<--dir=>I<XXX>
-
-With B<--split>, specifies the directory where the individual HTML
-files will be written.
+With MusicXML input, deals with a number of peculiarities in the XML
+as generated by MuseScore. This implies b<--supress-text>.
 
 =item B<--npp=>I<variant>
 
@@ -353,25 +374,11 @@ with an 'm' instead of the default '-'.
 
 See also L<NPP IMAGING>.
 
-=item B<--transpose=[+-]NN>  B<-x>
+=item B<--output=>I<XXX>
 
-Transposes up/down semitones.
+Specifies the desired output file name.
 
-Currently implemented for PDF and PNG output only.
-
-=item B<--[no]toc>
-
-With PDF output, produces or suppresses the table of contents.
-
-By default, A ToC is automatically generated if a playlist
-contains more than one song.
-
-=item B<-->[B<no->]B<suppress-upbeat>
-
-With MusicXML input, suppresses an initial upbeat. iRealPro doesn't
-deal with upbeats anyway.
-
-This is enabled by default.
+The file name extension controls the output type. 
 
 =item B<-->[B<no->]B<override-alt>
 
@@ -380,22 +387,41 @@ C<7b5#5b9#9>) with C<alt>.
 
 This is enabled by default.
 
-=item B<-->[B<no->]B<condense>
+=item B<--select=>I<NN>
 
-With MusicXML input, uses condensed chords when there may not be
-sufficient space to show a chord without overlapping.
+Selects a single song from a playlist.
 
-This is enabled by default.
+=item B<--split>
+
+Splits the songs from a playlist into individual HTML files. Use
+B<--dir> to control where the files will be written.
+
+Note: B<--output> is ignored.
 
 =item B<-->[B<no->]B<suppress-text>
 
 With MusicXML input, ignore the directives written on top of or below
 the staffs. Often these texts lead to unreadable results.
 
-=item B<-->[B<no->]B<musescore>
+=item B<-->[B<no->]B<suppress-upbeat>
 
-With MusicXML input, deals with a number of peculiarities in the XML
-as generated by MuseScore. This implies b<--supress-text>.
+With MusicXML input, suppresses an initial upbeat. iRealPro doesn't
+deal with upbeats anyway.
+
+This is enabled by default.
+
+=item B<--[no]toc>
+
+With PDF output, produces or suppresses the table of contents.
+
+By default, A ToC is automatically generated if a playlist
+contains more than one song.
+
+=item B<--transpose=[+-]NN>  B<-x>
+
+Transposes up/down semitones.
+
+Currently implemented for PDF and PNG output only.
 
 =item B<--help>
 
