@@ -2,6 +2,8 @@ Revision history for Data-iRealPro
 
 1.16
 
+	Implement colouring of the individual NPP glyphs.
+	Add --crop command line argument.
 	Improvements for MMA output.
 
 1.15	2019-01-20
